# Django-Assginment

./: db.sqlite3  pyproject.toml
Django_challenge_day1/: .python-version
Django_challenge_day1/config/: settings.py
config/: settings.py  urls.py
templates/: base.html  todo_create.html  todo_info.html  todo_list.html
templates/registration/: login.html  signup.html
todo/: admin.py  forms.py  models.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_options_todo_modified_at.py  0003_todo_author.py  0004_rename_is_complete_todo_is_completed.py
users/: views.py
